# TemplateImGui

./: .gitignore  README.md
ImGui/: CMakeLists.txt  imgui_demo.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
headers/: App.h  imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_impl_sdl3.h
lib/: App.cpp  CMakeLists.txt  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/: CMakeLists.txt  main.cpp
src/lib/: App.cpp  CMakeLists.txt
